# fastquadtree

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  README.md  benchmark_plotly.py  cargo.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_python_wrapper.py
.github/workflows/: docs.yml  release.yml  test.yml
2.0_migration_guide/: index.html
2.0_proposal/: index.html
api/insert_result/: index.html
api/item/: index.html
api/point_item/: index.html
api/pygame/: index.html
api/pyqtree/: index.html
api/quadtree/: index.html
benchmark/: index.html
benchmarks/: benchmark_native_vs_shim.py  benchmark_np_vs_list.py  benchmark_serialization_vs_rebuild.py
docs/: 2.0_migration_guide.md  2.0_proposal.md  benchmark.md  engine_defaults.md  future_features.md  index.md  quickstart.md  runnables.md
engine_defaults/: index.html
future_features/: index.html
interactive/: ballpit.py  interactive.py  interactive_v2.py  pygame_sprites.py
quickstart/: index.html
runnables/: index.html
rust_usage/: index.html
scripts/: build_pyodide_wheel.sh
search/: search_index.json
src/: geom.rs  lib.rs  obj_store.rs  quadtree.rs  rect_quadtree.rs  serialization.rs
tests/: rect_quadtree.rs  serialization.rs  test_delete.rs  test_delete_by_object.py  test_delete_python.py  test_insert_many_numpy.py  test_obj_store.py  test_pyqtree_shim_compat.py  test_python.py  test_query_np.py  test_rect_quadtree.py  test_rect_query_np.py  test_serialization.py  test_unconventional_bounds.py  test_wrapper_edges.py
(+59 files in other folders)
