[package]
name = "fastquadtree"
version = "2.2.0"
edition = "2021"
rust-version = "1.89"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
smallvec = "1.15.1"
numpy = "0.28"
wincode = { version = "0.5.5", features = ["derive"] }
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
